--- a/package.json
+++ b/package.json
@@ -5,22 +5,26 @@
     "@types/node": "^25.0.3",
     "@types/supertest": "^6.0.3",
     "cors": "^2.8.5",
+    "drizzle-kit": "^0.31.8",
     "supertest": "^7.1.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3",
     "vitest": "^4.0.16"
   },
   "dependencies": {
-    "express": "^5.2.1"
+    "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.45.1",
+    "express": "^5.2.1",
+    "postgres": "^3.4.7"
   },
   "name": "be-e-commerce",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn src/index.ts",
+    "dev": "ts-node-dev --respawn src/app.ts",
     "build": "tsc",
-    "start": "node ./dist/index.js",
+    "start": "node ./dist/appts",
     "test:watch": "vitest --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
